--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- git config --global user.name "farrux" -->
      <!-- git config --global user.email "vhvbhjbjhbhj@gmail.com" -->
       <!-- git init -->
-       <!-- git add -->
-        <!-- git commit -m "commentariya" -->
+       <!-- git add .-->
+        <!-- git commit -m "Pense" -->
          <!-- git branch -M main -->
           <!-- git remote add origin url -->
            <!-- git push -u origin main -->
@@ -21,5 +21,10 @@
            <!-- git add -->
             <!-- git commit -m -->
              <!-- git push -u origin main -->
+
+<div></div>
+<form action=""></form>
+<header></header>
+<footer></footer>
 </body>
 </html>
